crates/plotnik-lib/tests/02-parser/recovery_unexpected/comma_between_defs.txt
A = (a), B = (b)
==== diagnostics ====
error: expected a pattern
 --> query.ptk:1:8
  |
1 | A = (a), B = (b)
  |        ^
  |
help: try `(node)`, `[a b]`, `{a b}`, `"literal"`, or `_`
